[package]
name = "egui-rad-builder"
version = "0.1.1"
edition = "2024"
description = "Tool for quickly designing egui user interfaces "
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/egui-rad-builder"
readme = "README.md"

[dependencies]
eframe = "0.33.0"
egui = { version = "0.33", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
